# Rattle-VST

./: .gitattributes  .gitignore  CMakeLists.txt  RATTLE ToDo.txt  SPEC.md  build-safe.ps1  deploy_and_test.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/core/: OnsetDetector.cpp  OnsetDetector.h  Params.h  PreFilter.cpp  PreFilter.h  RattleEngine.cpp  RattleEngine.h  SampleSet.cpp  SampleSet.h  SequenceVoice.cpp  SequenceVoice.h
Source/ui/: ChoiceToggleGroup.h  FFTView.cpp  FFTView.h  LedDot.h  RattleGraph.cpp  RattleGraph.h  SlotButton.h  WaveformView.cpp  WaveformView.h
